<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/find_user"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        app:iconifiedByDefault="true"
        android:configChanges="keyboardHidden|orientation|screenSize"
        />


    <item
        android:id="@+id/author"
        android:icon="@drawable/ic_baseline_bookmarks_24"
        android:title="@string/find_user"
        android:iconTint="@color/white"
        app:showAsAction="collapseActionView|ifRoom"
        />


    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting"
        app:showAsAction="collapseActionView|ifRoom"
        />

</menu>