...
        app:theme="@style/Theme.Githubuser.Dark"
        app:titleTextAppearance="@style/ToolBarStyleLight"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecviewUser"
        style="@style/Theme.Githubuser.Dark"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
