<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/detailFragment"
    tools:context=".presentation.fragment.detail.DetailFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/Detailtoolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:titleMargin="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="86dp">

                <ImageView
                    android:id="@+id/btn_favorite"
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/favoritebutton"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_share"
                    app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/btn_share"
                    android:layout_width="20dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_baseline_share_24"
                    android:contentDescription="@string/author"
                    app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:layout_editor_absoluteY="12dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/MainLayout"
            android:layout_width="match_parent"
            android:layout_height="1500dp">

            <ImageView
                android:id="@+id/Img_tvdetail"
                android:layout_width="117dp"
                android:layout_height="103dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status"
                tools:ignore="MissingConstraints,ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/web_tvitem"
                app:tabTextAppearance="@style/TitleStyleTwo"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/Followviewpager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/web_tvitem"
                style="@style/TvTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poplight"
                android:gravity="center|start"
                android:textSize="12sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_home_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loc_tvitem" />

            <TextView
                android:id="@+id/loc_tvitem"
                style="@style/TvTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poplight"
                android:gravity="center|start"
                android:textSize="14sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Comapny_tvitem" />

            <TextView
                android:id="@+id/Comapny_tvitem"
                style="@style/TvTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poplight"
                android:gravity="center|start"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_business_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Bio_tvitem" />

            <TextView
                android:id="@+id/Bio_tvitem"
                style="@style/TvResultStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poplight"
                android:gravity="start"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/Follower_tvitem"
                style="@style/TvTitleStyle"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Img_tvdetail" />

            <TextView
                android:id="@+id/textView9"
                style="@style/TvTitleStyle"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/follower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Follower_tvitem" />

            <TextView
                android:id="@+id/Following_tvitem"
                style="@style/TvTitleStyle"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Img_tvdetail" />

            <TextView
                android:id="@+id/textView10"
                style="@style/TvTitleStyle"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Following_tvitem" />

            <TextView
                android:id="@+id/Repository_tvitem"
                style="@style/TvTitleStyle"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.923"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Img_tvdetail" />

            <TextView
                android:id="@+id/textView12"
                style="@style/TvTitleStyle"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/repository"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.992"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Repository_tvitem" />

            <TextView
                android:id="@+id/Username_tvdetailpage"
                style="@style/TvTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/apexsans"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.259"
                app:layout_constraintStart_toEndOf="@+id/Img_tvdetail"
                app:layout_constraintTop_toTopOf="@+id/Img_tvdetail" />

            <TextView
                android:id="@+id/surname_detailopage"
                style="@style/TvResultStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/apexsans"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/Img_tvdetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Img_tvdetail"
                app:layout_constraintTop_toBottomOf="@+id/Username_tvdetailpage"
                app:layout_constraintVertical_bias="0.222" />

            <ProgressBar
                android:id="@+id/Detail_progress"
                android:layout_width="28dp"
                android:layout_height="23dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/Img_tvdetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.924"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/Errorresponse_detail_tv"
                style="@style/TitleStyleTwo"
                android:layout_width="363dp"
                android:layout_height="123dp"
                android:layout_marginTop="32dp"
                android:gravity="center|top"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TvTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</ScrollView>