...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.favorite.com.example.githubuser.presentation.fragment.favorite.FavoriteFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerV_Favorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
